# sp1-aggregation-example

./: README.md
aggregation-program/: Cargo.toml
aggregation-program/elf/: riscv32im-succinct-zkvm-elf
aggregation-program/src/: main.rs
contracts/script/: Deploy.s.sol
contracts/src/: Groth16Verifier.sol  MyContract.sol  SP1Verifier.sol
lib/: Cargo.toml
lib/src/: lib.rs
programs/aggregation/: Cargo.toml
programs/aggregation/elf/: riscv32im-succinct-zkvm-elf
programs/aggregation/src/: main.rs
programs/fibonacci/elf/: riscv32im-succinct-zkvm-elf
programs/fibonacci/src/: main.rs
script/: Cargo.toml  build.rs
script/scripts/: verifier.rs  vkey.rs
script/src/: main.rs
simple-program/: Cargo.toml
simple-program/elf/: riscv32im-succinct-zkvm-elf
