[workspace]
[package]
version = "0.1.0"
name = "sp1-aggregation-example-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", branch = "chris/fixes" }
tracing = "0.1.40"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git" }
