[workspace]
[package]
version = "0.1.0"
name = "sp1-aggregation-example-script"
edition = "2021"
default-run = "sp1-aggregation-example-script"

[dependencies]
hex = "0.4.3"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet" }
tracing = "0.1.40"
aggregation-lib = { path = "../lib" }

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet" }